add solution snake task 20/20